Fixed Java version issue and successfully ran project